--- a/src/app/modules/issues/pages/issues-list-page/issues-list-page.html
+++ b/src/app/modules/issues/pages/issues-list-page/issues-list-page.html
@@ -19,6 +19,7 @@
 <!--  Listado de issues -->
   <div class="mt-4 flex flex-col col-span-2">
     <h3>Issues</h3>
+    <a routerLink="/issues/123" class="btn mt-2">Issue 123</a>
     <!--    Todo: Listado de issues-->
 
     <!--    Todo: Spinner-->
@@ -28,6 +29,13 @@
 <!--  Labels-->
   <div>
     <h3>labels</h3>
+    @if (LabelQuery.isLoading()) {
+      <p>Estamos cargando</p>
+    } @else {
+      <pre>
+        {{LabelQuery.data() | json}}
+      </pre>
+    }
   </div>
 
 </section>
