--- a/src/app/modules/issues/componets/issue-item/issue-item.html
+++ b/src/app/modules/issues/componets/issue-item/issue-item.html
@@ -1,5 +1,5 @@
 <div
-  class="flex items-center px-2 py-3 mb-5 border rounded-md bg-slate-900 hover:bg-slate-800">
+  class="flex items-center px-2 py-3 mb-5 border rounded-md bg-slate-900 hover:bg-slate-800" (mouseenter)="prepareIssue()">
   @if( isOpen() ) {
     <i class="fa-regular fa-folder-open text-green-500"></i>
 
